# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.76 2004/08/03 00:09:24 zhen Exp $

  02 Aug 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py:
  fix for bug #58208

  02 Aug 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  bugfix #51086

  02 Aug 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  +targets/stage1/build.py, -targets/stage1/build.sh,
  targets/stage1/stage1-chroot.sh, targets/stage1/stage1-preclean2-chroot.sh,
  targets/stage1/stage1.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh:
  applied patch from bug #58840. it should fix up things for uclibc stages and
  cascaded profiles. thanks to Mike Frysinger (vapier@gentoo.org) for the patch.

  21 Jul 2004; John Davis <zhen@gentoo.org> +livecd/files/gamecd-xinitrc,
  +livecd/files/gamecd.motd.txt, +livecd/files/generic-motd.txt,
  +livecd/files/livecd-bash_profile, +livecd/files/livecd-local.start,
  -livecd/files/livecd-rclocal, +livecd/files/minimal.motd.txt,
  -livecd/files/motd.txt, +livecd/files/universal.motd.txt,
  livecd/runscript/default-runscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  addition of wolf31o2's gamecd patchset. untested, so please beware

  14 Jul 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
  fixed a bug for livecd-stage2. somehow, the inheritance got mucked up and the
  livecds were not cleaning out livecd/empty livecd/rm etc. I moved the code for
  this out of generic_stage_target and into livecd-stage2 since the
  livecd-stage2 class was overriding generic_stage_target for cleaning anyway.

  13 Jul 2004; <zhen@gentoo.org> livecd/runscript-support/livecdfs-update.sh: