@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.76 2004/08/03 00:09:24 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.77 2004/08/10 04:25:08 zhen Exp $
+
+  10 Aug 2004; John Davis <zhen@gentoo.org> arch/mips.py:
+  add support for mips4n32 subarch. thanks to iluxa@gentoo.org. closes bug
+  #59882.
 
   02 Aug 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py:
   fix for bug #58208
